ready to upload

--- a/docs/partials/api/mk.notifications.html
+++ b/docs/partials/api/mk.notifications.html
@@ -8,5 +8,6 @@ Notifications are placed on the top right corner of the screen and are visible f
 Notifications are also dismissable by close button
 Notifications get stacked up until the max amount is reached (Default: 5). The service will group older notifications
 into a group so that the max amount is satisfied again.
-If a visible notification gets dismissed, the newest grouped notification gets visible again.</p>
+If a visible notification gets dismissed, the newest grouped notification gets visible again.
+The ngAnimate module is optional, if you include it you will get some transitions for new notifications.</p>
 </div></div>
