--- a/src/app/components/notifications/notifications.scss
+++ b/src/app/components/notifications/notifications.scss
@@ -1,10 +1,3 @@
-/**
-* @name
-* @author Matthias Komarek matthias@m-komarek.de
-* @copyright Matthias Komarek 2015
-* @date 06.12.15 20:29
-*/
-
 // Main Colors
 
 $infoColor: #72A3DD;
@@ -61,6 +54,23 @@ $groupBorder: #7F7E7F;
 		background: $errorColor;
 		border: 1px solid $errorBorder;
 	}
+
+	// ANIMATIONS
+	&.ng-move,
+	&.ng-enter {
+		transition:all linear 0.25s;
+	}
+
+	&.ng-move,
+	&.ng-enter {
+		opacity:0;
+	}
+
+	&.ng-move.ng-move-active,
+	&.ng-enter.ng-enter-active {
+		opacity:1;
+	}
+
 }
 .notification-group {
 	color: #fff;
@@ -86,17 +96,3 @@ $groupBorder: #7F7E7F;
 	}
 }
 
-.notification.ng-move,
-.notification.ng-enter {
-	transition:all linear 0.25s;
-}
-
-.notification.ng-move,
-.notification.ng-enter {
-	opacity:0;
-}
-
-.notification.ng-move.ng-move-active,
-.notification.ng-enter.ng-enter-active {
-	opacity:1;
-}
